--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,14 @@
                 android:background="@drawable/login_edittext"
                 android:layout_below="@+id/textEnterPhoneNumber"
                 />
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_below="@+id/phoneEditText"
+                android:layout_marginTop="15dp"
+                android:textColor="#000"
+                android:gravity="center"
+                android:text="Currently we are accepting orders in Kaushambi, Ghaziabad. If you do not belong to this area, Kindly exit the application."
+                android:layout_height="wrap_content"/>
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/layoutVerify"
@@ -164,7 +171,7 @@
         android:textAllCaps="false"
         android:textColor="#fff"
         android:visibility="invisible"
-        android:textSize="28sp"
+        android:textSize="22sp"
         tools:layout_editor_absoluteX="0dp" />
 
 </RelativeLayout>
